--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.511.0",
     "next": "^15.3.3",
     "next-sitemap": "^4.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^15.3.3",
