--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
-  }
+  },
+  "browserslist": [
+    "defaults and supports es6-module"
+  ]
 }
