--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "autoprefixer": "^10",
     "cross-env": "^7.0.3",
     "eslint": "9.28.0",
-    "eslint-config-next": "15.3.3",
+    "eslint-config-next": "^15.3.3",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
