--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.511.0",
     "next": "^15.3.3",
