--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.4.1",
+    "@tailwindcss/typography": "^0.5.16",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.511.0",
     "next": "^15.3.3",
+    "next-mdx-remote": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
