--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.4.1",
+    "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/typography": "^0.5.16",
+    "axios": "^1.13.1",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.511.0",
