--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -17,18 +13,19 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": ".",                      // dodato: baza za relative import
-    "paths": {                          // dodato: aliasi
-      "@/*": ["./*"]
+
+    "baseUrl": ".", 
+
+    "paths": {
+      "@/*": ["./*"],          // OVO pokriva root: components, pages, lib, public
+      "@/data/*": ["src/data/*"] // Dodato: za sve iz src/data
     }
   },
   "include": [
     "next-env.d.ts",
-     "global.d.ts",    
+    "global.d.ts",
     "**/*.ts",
     "**/*.tsx"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
