--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "majstordex-app",
   "version": "0.1.0",
   "private": true,
-"scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
-  "lint": "next lint",
-  "prebuild": "next build && next-sitemap"
-},
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "prebuild": "next build && next-sitemap"
+  },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.13.1",
+    "critters": "^0.0.23",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.511.0",
