--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,19 +13,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-
-    "baseUrl": ".", 
-
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],          // OVO pokriva root: components, pages, lib, public
-      "@/data/*": ["src/data/*"] // Dodato: za sve iz src/data
+      "@/*": ["./*"],
+      "@/data/*": ["./src/data/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "global.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
+  "include": ["next-env.d.ts", "global.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
