--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "majstordex-app",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "prebuild": "next build && next-sitemap"
-  },
+"scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "postbuild": "next-sitemap",
+  "start": "next start",
+  "lint": "next lint"
+},
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
@@ -20,7 +20,7 @@
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.511.0",
-    "next": "^15.3.3",
+    "next": "^15.4.8",
     "next-mdx-remote": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "react": "^18",
